[metadata]
name = tkvue
description = Declarative Tkinter UI using makup language with reactive data binding
long_description = file: README.md
long_description_content_type = text/markdown
url=https://gitlab.com/ikus-soft/tkvue
author=IKUS Software inc.
author_email=support@ikus-soft.com
maintainer=Patrik Dufresne
maintainer_email=patrik@ikus-soft.com
license = GPLv3
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    tkvue
package_dir =
    =src
include_package_data = True
setup_requires = 
    setuptools_scm>=5.0.1
python_requires = >=3.6, <4
