[metadata]
name = tkvue
description = Declarative Tkinter UI using makup language with reactive data binding
long_description = file: README.md
long_description_content_type = text/markdown
url=https://gitlab.com/ikus-soft/tkvue
author=IKUS Software inc.
author_email=support@ikus-soft.com
maintainer=Patrik Dufresne
maintainer_email=patrik@ikus-soft.com
license = LGPLv3
classifiers = 
    Development Status :: 4 - Beta
    Environment :: X11 Applications
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: User Interfaces

[options]
packages = 
    tkvue
package_dir =
    =src
include_package_data = True
setup_requires = 
    setuptools_scm>=5.0.1
python_requires = >=3.6, <4

[options.entry_points]
babel.extractors = 
  tkvue = tkvue:extract_tkvue
